overflow hidden fix

--- a/new.css
+++ b/new.css
@@ -85,7 +85,6 @@
     width: 100vw;
     height: 100%;
     background-size: cover;
-    overflow: hidden;
     position: absolute;
     top: 0;
     left: 0;
@@ -117,10 +116,12 @@
 }
 
 /*zoom-in of the cup background upon hover*/
-@media (min-width: 400px)
-{
+@media only screen and (min-width: 400px){
 .jumbotron{
   overflow: hidden;
+}
+.jumbotron-billboard .img_back{
+    overflow: hidden;
 }
 .jumbotron-billboard:hover .img_back,
 .jumbotron-billboard:focus .img_back,.jumbotron-billboard.pg-state-hover .img_back,.jumbotron-billboard.pg-state-hover .img_back,.jumbotron-billboard.pg-state-focus .img_back
@@ -1757,7 +1758,7 @@ div.index_withme_contact-button-container
     margin-top: 3em;
 }
 
-@media (min-width:400px){}
+
 .index_animation_bg
 {
     width: 300px;
@@ -1769,7 +1770,7 @@ div.index_withme_contact-button-container
     animation-iteration-count: 1;
     animation-fill-mode: forwards;
 }
-}
+
 @keyframes play{
   0% {
     opacity: 0;
